--- a/HTML_Synt/index.html
+++ b/HTML_Synt/index.html
@@ -85,7 +85,7 @@
         <div class="sliderBox">
           <label for="pracOne" class="form-label zeroLabel" >0%</label>
           <!-- <b for="realOne" class="form-label" id="valOne">50</b> -->
-          <label for="pracOne" class="form-label" style="...">|</label>
+          <label for="pracOne" class="form-label" style="...">  50%</label>
           <label for="pracOne" class="form-label oneLabel">100%</label>
           <input type="range" class="form-range" id="pracOne" oninput="set('pracOne','pracOne')">
         </div>
@@ -124,7 +124,7 @@
         <div class="sliderBox">
           <label for="realOne" class="form-label zeroLabel" >0%</label>
           <!-- <b for="realOne" class="form-label" id="valOne">50</b> -->
-          <label for="realOne" class="form-label">|</label>
+          <label for="realOne" class="form-label">  50%</label>
           <label for="realOne" class="form-label oneLabel">100%</label>
           <input type="range" class="form-range" id="realOne" oninput="set('valOne','realOne')">
         </div>
