Bolded and Larger Stimuli Font

--- a/HTML_Synt/index.html
+++ b/HTML_Synt/index.html
@@ -75,7 +75,7 @@
 
     <ul class="list-group">
       <li class="list-group-item">
-        <p id="pracRowOne">something</p>
+        <h2 id="pracRowOne">something</h2>
       </li>
 
       <li class="list-group-item">
@@ -113,7 +113,7 @@
 
     <ul class="list-group">
       <li class="list-group-item">
-        <p id="realRowOne"></p>
+        <h2 id="realRowOne"></h2>
       </li>
 
       <li class="list-group-item">
