Edited Instructions and Training

--- a/HTML_Synt/index.html
+++ b/HTML_Synt/index.html
@@ -55,11 +55,11 @@
 <div id="practiceIntro" style="display: none" class="container">
   <div>
     <p> <br>
-      In this study you'll be asked to read sentences like the one below: <br><br>
-      <b>"Jeff ordered sushi or sashimi for lunch."</b><br><br>
-      You'll also be presented with a question that asks you how possible it is that both of two items in the sentence are the case together. For example:<br><br>
-      <b>"Based on the sentence, how possible is it that Jeff ordered both sushi and sashimi for lunch?"</b><br><br>
-      You'll respond to the question using a slider that ranges from 0% (impossible) to 100% (guaranteed).<br><br>
+      Imagine you heard someone say the sentence below: <br><br>
+      <b>"The market is giving away free cookies or brownies today."</b><br><br>
+      It's not clear based on the sentence whether you can get both a free cookie and a free brownie, or just one or the other because the word "or" is often ambiguous.<br><br>
+      We're interested in measuring your intuitions about what "or" means in different sentences. <br><br>
+      After reading each trial sentence, you'll be asked to rate the likelihood that both things in the sentence are allowed/true using a slider that ranges from 0% (impossible) to 100% (guaranteed).<br><br>
       When you're ready to proceed to a few practice trials click the button below. <br>
     </p>
   </div>
