--- a/HTML_Synt/index.html
+++ b/HTML_Synt/index.html
@@ -55,10 +55,14 @@
 <div id="practiceIntro" style="display: none" class="container">
   <div>
     <p> <br>
-      Imagine you heard someone say the sentence below: <br><br>
+      Imagine you heard someone you trust say the sentences below: <br><br>
+      <b>"My grandma has both a cat and a dog."</b><br><br>
+      Based on this first sentence, it's clear that the speaker's grandma has BOTH a cat and a dog, not one or the other.<br><br>
+      <b>"I went to the grocery store, but not to the hardware store."</b><br><br>
+      Based on the above sentence, it's clear that the speaker did NOT go to both stores. .<br><br>
       <b>"The market is giving away free cookies or brownies today."</b><br><br>
-      It's not clear based on the sentence whether you can get both a free cookie and a free brownie, or just one or the other because the word "or" is often ambiguous.<br><br>
-      We're interested in measuring your intuitions about what "or" means in different sentences. <br><br>
+      In this last sentence it's not clear whether you can get both a free cookie and a free brownie, or just one or the other.<br><br>
+      We're interested in measuring your intuitions about the meaning of sentences like these. <br><br>
       After reading each trial sentence, you'll be asked to rate the likelihood that both things in the sentence are allowed/true using a slider that ranges from 0% (impossible) to 100% (guaranteed).<br><br>
       When you're ready to proceed to a few practice trials click the button below. <br>
     </p>
@@ -71,7 +75,7 @@
 
 <div id="practiceTestFrame" style="display: none" class="container">
   <div id="practiceTest">
-    <p id="pracSentence">Imagine someone said the following sentence:</p>
+    <p id="pracSentence">Imagine someone you trust said the following sentence:</p>
 
     <ul class="list-group">
       <li class="list-group-item">
@@ -109,7 +113,7 @@
     </div>
   </div>
   <div id="realTest">
-    <p id="realSentence">Imagine someone said the following sentence:</p>
+    <p id="realSentence">Imagine someone you trust said the following sentence:</p>
 
     <ul class="list-group">
       <li class="list-group-item">
