--- a/HTML_Synt/index.html
+++ b/HTML_Synt/index.html
@@ -55,16 +55,9 @@
 <div id="practiceIntro" style="display: none" class="container">
   <div>
     <p> <br>
-      Imagine you heard someone you trust say the sentences below: <br><br>
-      <b>"My grandma has both a cat and a dog."</b><br><br>
-      Based on this first sentence, it's clear that the speaker's grandma has BOTH a cat and a dog, not one or the other.<br><br>
-      <b>"I went to the grocery store, but not to the hardware store."</b><br><br>
-      Based on the above sentence, it's clear that the speaker did NOT go to both stores. .<br><br>
-      <b>"The market is giving away free cookies or brownies today."</b><br><br>
-      In this last sentence it's not clear whether you can get both a free cookie and a free brownie, or just one or the other.<br><br>
-      We're interested in measuring your intuitions about the meaning of sentences like these. <br><br>
-      After reading each trial sentence, you'll be asked to rate the likelihood that both things in the sentence are allowed/true using a slider that ranges from 0% (impossible) to 100% (guaranteed).<br><br>
-      When you're ready to proceed to a few practice trials click the button below. <br>
+      In this study we're interested in measuring your intuitions about the meaning of certain sentences. Some will have clear meanings while others may be more ambiguous.<br><br>
+      After reading each trial sentence, you'll be asked to rate the likelihood that two things in the sentence are both allowed/true using a slider that ranges from 0% (impossible) to 100% (guaranteed).<br><br>
+      When you're ready to proceed to a few examples click the button below. <br>
     </p>
   </div>
 
