Updated instructions and gists

--- a/HTML_Synt/index.html
+++ b/HTML_Synt/index.html
@@ -56,8 +56,8 @@
   <div>
     <p> <br>
       In this study we're interested in measuring your intuitions about the meaning of certain sentences. Some will have clear meanings while others may be more ambiguous.<br><br>
-      After reading each trial sentence, you'll be asked to rate the likelihood that two things in the sentence are both allowed/true using a slider that ranges from 0% (impossible) to 100% (guaranteed).<br><br>
-      When you're ready to proceed to a few examples click the button below. <br>
+      After reading each trial sentence, you'll be asked to rate the likelihood that two things in the sentence are both true using a slider that ranges from 0% to 100%.<br><br>
+      We'll give you a few examples, then let you practice with feedback before the actual experiment begins. <br>
     </p>
   </div>
 
